--- a/Fastcampus/VoiceRecoder/app/src/main/res/layout/activity_main.xml
+++ b/Fastcampus/VoiceRecoder/app/src/main/res/layout/activity_main.xml
@@ -14,13 +14,13 @@
         android:layout_height="wrap_content"
         android:text="00:00.00"
         android:textSize="40sp"
-        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintBottom_toTopOf="@+id/waveformView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/view"
+    <com.example.voicerecoder.WaveformView
+        android:id="@+id/waveformView"
         android:layout_width="0dp"
         android:layout_height="250dp"
         app:layout_constraintBottom_toTopOf="@id/recordButton"
