--- a/Fastcampus/OrderPage/app/src/main/res/layout/fragment_home.xml
+++ b/Fastcampus/OrderPage/app/src/main/res/layout/fragment_home.xml
@@ -66,8 +66,9 @@
                     android:id="@+id/starCountTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="10dp"
-                    android:text="5/12"
+                    android:text="@string/appbar_star_title"
                     android:textColor="@color/black"
                     android:textSize="28sp"
                     android:textStyle="bold"
