--- a/Fastcampus/OrderPage/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/Fastcampus/OrderPage/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -2,8 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/homeFragment"
+        android:icon="@drawable/home"
         android:title="@string/home"/>
     <item
         android:id="@+id/orderFragment"
+        android:icon="@drawable/order"
         android:title="@string/order"/>
 </menu>
