--- a/Fastcampus/Chatting/app/src/main/res/layout/item_chat.xml
+++ b/Fastcampus/Chatting/app/src/main/res/layout/item_chat.xml
@@ -6,6 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
     android:padding="12dp">
 
     <TextView
@@ -21,9 +24,10 @@
     <TextView
         android:id="@+id/messageTextView"
         android:layout_width="0dp"
-        android:textSize="16sp"
-        android:textColor="@color/black"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/userNameTextView"
         app:layout_constraintStart_toStartOf="@+id/userNameTextView"
         app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
