--- a/Fastcampus/Chatting/app/src/main/res/values/api_key.xml
+++ b/Fastcampus/Chatting/app/src/main/res/values/api_key.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="FCM_SERVER_KEY">서버키</string>"
+    <string name="FCM_SERVER_KEY">ef28c8b2399f6e6ff522e03b3c9056a84866b2e8</string>"
 </resources>
