--- a/Fastcampus/NaverMap/app/src/main/res/layout/item_restaurant.xml
+++ b/Fastcampus/NaverMap/app/src/main/res/layout/item_restaurant.xml
@@ -43,6 +43,8 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleTextView"
