--- a/Fastcampus/OrderPage/app/src/main/res/layout/fragment_home.xml
+++ b/Fastcampus/OrderPage/app/src/main/res/layout/fragment_home.xml
@@ -135,9 +135,16 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
             <include
                 android:id="@+id/recommendMenuList"
+                layout="@layout/layout_horizontal_menu_list" />
+            <include
+                android:id="@+id/bannerLayout"
+                layout="@layout/layout_banner_image" />
+            <include
+                android:id="@+id/foodLayout"
                 layout="@layout/layout_horizontal_menu_list" />
         </LinearLayout>
     </ScrollView>
