--- a/Fastcampus/OrderPage/app/src/main/res/layout/item_menu.xml
+++ b/Fastcampus/OrderPage/app/src/main/res/layout/item_menu.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,7 +11,8 @@
         android:importantForAccessibility="no"
         android:padding="5dp"
         android:layout_width="120dp"
-        android:layout_height="120dp"/>
+        android:layout_height="120dp"
+        tools:src="@color/black"/>
     <TextView
         android:id="@+id/nameTextView"
         android:gravity="center"
